syntax = "proto3";

package post;


import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "posts-domain.proto";
import "posts-dto.proto";

service PostService {
  rpc CreatePost(CreatePostRequest) returns (Post);
  rpc GetPost(GetPostRequest) returns (Post);
  rpc DeletePost(DeletePostRequest) returns (google.protobuf.Empty);
  rpc UpdatePost(UpdatePostRequest) returns (Post);
  rpc ListPosts(google.protobuf.Empty) returns (ListPostsResponse);
  rpc GetPostsByAuthor(GetPostsByAuthorRequest) returns (ListPostsResponse);
  rpc GetPostsByTags(GetPostsByTagsRequest) returns (ListPostsResponse);
  rpc GetPostsIdsByRecommendations(GetGetPostsIdsByRecommendationsRequest) returns (ListPostsResponse);
}